container fixes, questionnaire alignment with categories

--- a/app/assets/stylesheets/pages/_personality_questionnaire.scss
+++ b/app/assets/stylesheets/pages/_personality_questionnaire.scss
@@ -1,10 +1,10 @@
 #personality-questionnaire-form {
   margin: auto;
-  max-width: 80%;
+  // max-width: 80%;
   background-color: #F6FBF9;
   text-align: left;
   border-radius: 24px;
-  padding: 40px 50px;
+  padding: 40px 20px;
 
   h1 {
     font-size: 32px;
